start data exploration

--- a/dev/03-Classification/03-Classification.ipynb
+++ b/dev/03-Classification/03-Classification.ipynb
@@ -905,7 +905,19 @@
     "\n",
     "# evaluate model\n",
     "test_scores = cross_val_score(sgd_clf, X_test_scaled, y_test, scoring='neg_mean_squared_error', cv=3)\n",
-    "test_scores"
+    "test_scores\n",
+    "\n",
+    "#precision_score(y_test, test_scores[0])\n",
+    "#recall_score(y_test, test_scores[0])\n",
+    "#f1_score(y_test, test_scores[0])\n",
+    "\n",
+    "#precision_score(y_test, test_scores[1])\n",
+    "#recall_score(y_test, test_scores[1])\n",
+    "#f1_score(y_test, test_scores[1])\n",
+    "\n",
+    "#precision_score(y_test, test_scores[2])\n",
+    "#recall_score(y_test, test_scores[2])\n",
+    "#f1_score(y_test, test_scores[2])"
    ]
   },
   {
