--- a/dev/genre-classification/initial_datatraining.ipynb
+++ b/dev/genre-classification/initial_datatraining.ipynb
@@ -344,25 +344,287 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "3e5a40ad",
+   "execution_count": 31,
+   "id": "e4a69dd5",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Series' object has no attribute 'unique_values'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_22584\\2114752954.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mgenres_list\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"genre\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munique_values\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mX:\\Games\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5573\u001b[0m         ):\n\u001b[0;32m   5574\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5575\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5576\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5577\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Series' object has no attribute 'unique_values'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>key</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>valence</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>duration_ms</th>\n",
+       "      <th>time_signature</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>genre</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>blues</th>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>classical</th>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>electronic</th>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>funk</th>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>jazz</th>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>metal</th>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>r&amp;b</th>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rap</th>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rock</th>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>techno</th>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            popularity  danceability  energy  key  loudness  mode  \\\n",
+       "genre                                                               \n",
+       "blues              100           100     100  100       100   100   \n",
+       "classical          101           101     101  101       101   101   \n",
+       "electronic         100           100     100  100       100   100   \n",
+       "funk               101           101     101  101       101   101   \n",
+       "jazz               102           102     102  102       102   102   \n",
+       "metal              100           100     100  100       100   100   \n",
+       "r&b                100           100     100  100       100   100   \n",
+       "rap                100           100     100  100       100   100   \n",
+       "rock               100           100     100  100       100   100   \n",
+       "techno             102           102     102  102       102   102   \n",
+       "\n",
+       "            speechiness  acousticness  instrumentalness  liveness  valence  \\\n",
+       "genre                                                                        \n",
+       "blues               100           100               100       100      100   \n",
+       "classical           101           101               101       101      101   \n",
+       "electronic          100           100               100       100      100   \n",
+       "funk                101           101               101       101      101   \n",
+       "jazz                102           102               102       102      102   \n",
+       "metal               100           100               100       100      100   \n",
+       "r&b                 100           100               100       100      100   \n",
+       "rap                 100           100               100       100      100   \n",
+       "rock                100           100               100       100      100   \n",
+       "techno              102           102               102       102      102   \n",
+       "\n",
+       "            tempo  duration_ms  time_signature  \n",
+       "genre                                           \n",
+       "blues         100          100             100  \n",
+       "classical     101          101             101  \n",
+       "electronic    100          100             100  \n",
+       "funk          101          101             101  \n",
+       "jazz          102          102             102  \n",
+       "metal         100          100             100  \n",
+       "r&b           100          100             100  \n",
+       "rap           100          100             100  \n",
+       "rock          100          100             100  \n",
+       "techno        102          102             102  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "genres_list = df.groupby()"
+    "df.groupby(\"genre\").count()"
    ]
   },
   {
@@ -687,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3243ff1b",
+   "id": "01db8bce",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -695,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a7db849",
+   "id": "014aaa25",
    "metadata": {},
    "outputs": [],
    "source": []
