Added Performance comparison to datatraining 1k file (A Heat Map) Saved performance results of each datatraining file in a folder

--- a/dev/genre-classification/data-collection.ipynb
+++ b/dev/genre-classification/data-collection.ipynb
@@ -2352,6 +2352,378 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>track_id</th>\n",
+       "      <th>track_name</th>\n",
+       "      <th>artist_name</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>duplicated_x</th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>key</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>valence</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>duration_ms</th>\n",
+       "      <th>time_signature</th>\n",
+       "      <th>duplicated_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2QjOHCTQ1Jl3zawyYOpxh6</td>\n",
+       "      <td>Sweater Weather</td>\n",
+       "      <td>The Neighbourhood</td>\n",
+       "      <td>91</td>\n",
+       "      <td>rock</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.612</td>\n",
+       "      <td>0.807</td>\n",
+       "      <td>10</td>\n",
+       "      <td>-2.810</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0336</td>\n",
+       "      <td>0.04950</td>\n",
+       "      <td>0.017700</td>\n",
+       "      <td>0.1010</td>\n",
+       "      <td>0.398</td>\n",
+       "      <td>124.053</td>\n",
+       "      <td>240400</td>\n",
+       "      <td>4</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2QjOHCTQ1Jl3zawyYOpxh6</td>\n",
+       "      <td>Sweater Weather</td>\n",
+       "      <td>The Neighbourhood</td>\n",
+       "      <td>91</td>\n",
+       "      <td>r&amp;b</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.612</td>\n",
+       "      <td>0.807</td>\n",
+       "      <td>10</td>\n",
+       "      <td>-2.810</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0336</td>\n",
+       "      <td>0.04950</td>\n",
+       "      <td>0.017700</td>\n",
+       "      <td>0.1010</td>\n",
+       "      <td>0.398</td>\n",
+       "      <td>124.053</td>\n",
+       "      <td>240400</td>\n",
+       "      <td>4</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4h9wh7iOZ0GGn8QVp4RAOB</td>\n",
+       "      <td>I Ain't Worried</td>\n",
+       "      <td>OneRepublic</td>\n",
+       "      <td>93</td>\n",
+       "      <td>rock</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.704</td>\n",
+       "      <td>0.797</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-5.927</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0475</td>\n",
+       "      <td>0.08260</td>\n",
+       "      <td>0.000745</td>\n",
+       "      <td>0.0546</td>\n",
+       "      <td>0.825</td>\n",
+       "      <td>139.994</td>\n",
+       "      <td>148486</td>\n",
+       "      <td>4</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4h9wh7iOZ0GGn8QVp4RAOB</td>\n",
+       "      <td>I Ain't Worried</td>\n",
+       "      <td>OneRepublic</td>\n",
+       "      <td>93</td>\n",
+       "      <td>r&amp;b</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.704</td>\n",
+       "      <td>0.797</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-5.927</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0475</td>\n",
+       "      <td>0.08260</td>\n",
+       "      <td>0.000745</td>\n",
+       "      <td>0.0546</td>\n",
+       "      <td>0.825</td>\n",
+       "      <td>139.994</td>\n",
+       "      <td>148486</td>\n",
+       "      <td>4</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>58ge6dfP91o9oXMzq3XkIS</td>\n",
+       "      <td>505</td>\n",
+       "      <td>Arctic Monkeys</td>\n",
+       "      <td>82</td>\n",
+       "      <td>rock</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.520</td>\n",
+       "      <td>0.852</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-5.866</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0543</td>\n",
+       "      <td>0.00237</td>\n",
+       "      <td>0.000058</td>\n",
+       "      <td>0.0733</td>\n",
+       "      <td>0.234</td>\n",
+       "      <td>140.267</td>\n",
+       "      <td>253587</td>\n",
+       "      <td>4</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9995</th>\n",
+       "      <td>7dSZ6zGTQx66c2GF91xCrb</td>\n",
+       "      <td>PROVENZA</td>\n",
+       "      <td>KAROL G</td>\n",
+       "      <td>84</td>\n",
+       "      <td>r&amp;b</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.870</td>\n",
+       "      <td>0.516</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-8.006</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0541</td>\n",
+       "      <td>0.65600</td>\n",
+       "      <td>0.008230</td>\n",
+       "      <td>0.1100</td>\n",
+       "      <td>0.530</td>\n",
+       "      <td>111.005</td>\n",
+       "      <td>210200</td>\n",
+       "      <td>4</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9996</th>\n",
+       "      <td>6leiB1fEsTnVCuPiielde5</td>\n",
+       "      <td>Something Like That</td>\n",
+       "      <td>Tim McGraw</td>\n",
+       "      <td>74</td>\n",
+       "      <td>r&amp;b</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.507</td>\n",
+       "      <td>0.850</td>\n",
+       "      <td>5</td>\n",
+       "      <td>-5.679</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0472</td>\n",
+       "      <td>0.37800</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0567</td>\n",
+       "      <td>0.847</td>\n",
+       "      <td>171.800</td>\n",
+       "      <td>183733</td>\n",
+       "      <td>4</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9997</th>\n",
+       "      <td>4qwKWGKzuq8mgIunO6EaA1</td>\n",
+       "      <td>Sleep Well</td>\n",
+       "      <td>d4vd</td>\n",
+       "      <td>79</td>\n",
+       "      <td>r&amp;b</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.449</td>\n",
+       "      <td>0.377</td>\n",
+       "      <td>8</td>\n",
+       "      <td>-9.438</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0343</td>\n",
+       "      <td>0.81500</td>\n",
+       "      <td>0.000012</td>\n",
+       "      <td>0.1420</td>\n",
+       "      <td>0.181</td>\n",
+       "      <td>155.560</td>\n",
+       "      <td>175875</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9998</th>\n",
+       "      <td>22I3h5AOENlH4CqXJsEbFR</td>\n",
+       "      <td>Collide (feat. Tyga)</td>\n",
+       "      <td>Justine Skye</td>\n",
+       "      <td>81</td>\n",
+       "      <td>r&amp;b</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.418</td>\n",
+       "      <td>0.310</td>\n",
+       "      <td>11</td>\n",
+       "      <td>-9.869</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0625</td>\n",
+       "      <td>0.09500</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.2160</td>\n",
+       "      <td>0.131</td>\n",
+       "      <td>139.614</td>\n",
+       "      <td>260170</td>\n",
+       "      <td>4</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9999</th>\n",
+       "      <td>2BJy4svtrGACqRB5BFLOK6</td>\n",
+       "      <td>Way of the Triune God - Hallelujah Version</td>\n",
+       "      <td>Tyler Childers</td>\n",
+       "      <td>73</td>\n",
+       "      <td>r&amp;b</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.696</td>\n",
+       "      <td>0.583</td>\n",
+       "      <td>10</td>\n",
+       "      <td>-6.384</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0307</td>\n",
+       "      <td>0.62900</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.1230</td>\n",
+       "      <td>0.543</td>\n",
+       "      <td>79.057</td>\n",
+       "      <td>208813</td>\n",
+       "      <td>4</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10000 rows × 20 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    track_id                                  track_name  \\\n",
+       "0     2QjOHCTQ1Jl3zawyYOpxh6                             Sweater Weather   \n",
+       "1     2QjOHCTQ1Jl3zawyYOpxh6                             Sweater Weather   \n",
+       "2     4h9wh7iOZ0GGn8QVp4RAOB                             I Ain't Worried   \n",
+       "3     4h9wh7iOZ0GGn8QVp4RAOB                             I Ain't Worried   \n",
+       "4     58ge6dfP91o9oXMzq3XkIS                                         505   \n",
+       "...                      ...                                         ...   \n",
+       "9995  7dSZ6zGTQx66c2GF91xCrb                                    PROVENZA   \n",
+       "9996  6leiB1fEsTnVCuPiielde5                         Something Like That   \n",
+       "9997  4qwKWGKzuq8mgIunO6EaA1                                  Sleep Well   \n",
+       "9998  22I3h5AOENlH4CqXJsEbFR                        Collide (feat. Tyga)   \n",
+       "9999  2BJy4svtrGACqRB5BFLOK6  Way of the Triune God - Hallelujah Version   \n",
+       "\n",
+       "            artist_name  popularity genre  duplicated_x  danceability  energy  \\\n",
+       "0     The Neighbourhood          91  rock         False         0.612   0.807   \n",
+       "1     The Neighbourhood          91   r&b          True         0.612   0.807   \n",
+       "2           OneRepublic          93  rock         False         0.704   0.797   \n",
+       "3           OneRepublic          93   r&b          True         0.704   0.797   \n",
+       "4        Arctic Monkeys          82  rock         False         0.520   0.852   \n",
+       "...                 ...         ...   ...           ...           ...     ...   \n",
+       "9995            KAROL G          84   r&b         False         0.870   0.516   \n",
+       "9996         Tim McGraw          74   r&b         False         0.507   0.850   \n",
+       "9997               d4vd          79   r&b         False         0.449   0.377   \n",
+       "9998       Justine Skye          81   r&b         False         0.418   0.310   \n",
+       "9999     Tyler Childers          73   r&b         False         0.696   0.583   \n",
+       "\n",
+       "      key  loudness  mode  speechiness  acousticness  instrumentalness  \\\n",
+       "0      10    -2.810     1       0.0336       0.04950          0.017700   \n",
+       "1      10    -2.810     1       0.0336       0.04950          0.017700   \n",
+       "2       0    -5.927     1       0.0475       0.08260          0.000745   \n",
+       "3       0    -5.927     1       0.0475       0.08260          0.000745   \n",
+       "4       0    -5.866     1       0.0543       0.00237          0.000058   \n",
+       "...   ...       ...   ...          ...           ...               ...   \n",
+       "9995    1    -8.006     1       0.0541       0.65600          0.008230   \n",
+       "9996    5    -5.679     1       0.0472       0.37800          0.000000   \n",
+       "9997    8    -9.438     1       0.0343       0.81500          0.000012   \n",
+       "9998   11    -9.869     0       0.0625       0.09500          0.000000   \n",
+       "9999   10    -6.384     1       0.0307       0.62900          0.000000   \n",
+       "\n",
+       "      liveness  valence    tempo  duration_ms  time_signature  duplicated_y  \n",
+       "0       0.1010    0.398  124.053       240400               4         False  \n",
+       "1       0.1010    0.398  124.053       240400               4         False  \n",
+       "2       0.0546    0.825  139.994       148486               4         False  \n",
+       "3       0.0546    0.825  139.994       148486               4         False  \n",
+       "4       0.0733    0.234  140.267       253587               4         False  \n",
+       "...        ...      ...      ...          ...             ...           ...  \n",
+       "9995    0.1100    0.530  111.005       210200               4         False  \n",
+       "9996    0.0567    0.847  171.800       183733               4         False  \n",
+       "9997    0.1420    0.181  155.560       175875               3         False  \n",
+       "9998    0.2160    0.131  139.614       260170               4         False  \n",
+       "9999    0.1230    0.543   79.057       208813               4         False  \n",
+       "\n",
+       "[10000 rows x 20 columns]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
