--- a/dev/genre-classification/initial_datatraining.ipynb
+++ b/dev/genre-classification/initial_datatraining.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "73b2eeeb",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d09c4ce6",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "1664fb24",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "9a8613b5",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
        "[1006 rows x 15 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "e4a69dd5",
    "metadata": {},
    "outputs": [
@@ -618,7 +618,7 @@
        "techno        102          102             102  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "2cc2cc50",
    "metadata": {},
    "outputs": [
@@ -737,7 +737,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "f29a5bad",
    "metadata": {},
    "outputs": [],
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "dd975e2f",
    "metadata": {
     "scrolled": false
@@ -781,121 +781,101 @@
       "cross_val_score: [blues]->DecisionTreeClassifier: {'min': 0.9, 'max': 0.91, 'mean': 0.9}\n",
       "cross_val_score: [blues]->RandomForestClassifier: {'min': 0.9, 'max': 0.91, 'mean': 0.9}\n",
       "cross_val_score: [blues]->SVC: {'min': 0.9, 'max': 0.91, 'mean': 0.91}\n",
-      "\n",
       "test-df: [blues]->LogisticRegression: 0.89\n",
       "test-df: [blues]->KNeighborsClassifier: 0.91\n",
       "test-df: [blues]->DecisionTreeClassifier: 0.91\n",
       "test-df: [blues]->RandomForestClassifier: 0.9\n",
       "test-df: [blues]->SVC: 0.88\n",
-      "\n",
       "cross_val_score: [classical]->LogisticRegression: {'min': 0.99, 'max': 1.0, 'mean': 0.99}\n",
       "cross_val_score: [classical]->KNeighborsClassifier: {'min': 0.99, 'max': 1.0, 'mean': 0.99}\n",
       "cross_val_score: [classical]->DecisionTreeClassifier: {'min': 0.96, 'max': 0.98, 'mean': 0.97}\n",
       "cross_val_score: [classical]->RandomForestClassifier: {'min': 0.98, 'max': 0.99, 'mean': 0.99}\n",
       "cross_val_score: [classical]->SVC: {'min': 0.99, 'max': 1.0, 'mean': 0.99}\n",
-      "\n",
       "test-df: [classical]->LogisticRegression: 0.98\n",
       "test-df: [classical]->KNeighborsClassifier: 0.97\n",
       "test-df: [classical]->DecisionTreeClassifier: 0.98\n",
       "test-df: [classical]->RandomForestClassifier: 0.98\n",
       "test-df: [classical]->SVC: 0.97\n",
-      "\n",
       "cross_val_score: [electronic]->LogisticRegression: {'min': 0.88, 'max': 0.9, 'mean': 0.89}\n",
       "cross_val_score: [electronic]->KNeighborsClassifier: {'min': 0.88, 'max': 0.9, 'mean': 0.89}\n",
       "cross_val_score: [electronic]->DecisionTreeClassifier: {'min': 0.88, 'max': 0.89, 'mean': 0.89}\n",
       "cross_val_score: [electronic]->RandomForestClassifier: {'min': 0.9, 'max': 0.91, 'mean': 0.9}\n",
       "cross_val_score: [electronic]->SVC: {'min': 0.9, 'max': 0.9, 'mean': 0.9}\n",
-      "\n",
       "test-df: [electronic]->LogisticRegression: 0.88\n",
       "test-df: [electronic]->KNeighborsClassifier: 0.89\n",
       "test-df: [electronic]->DecisionTreeClassifier: 0.88\n",
       "test-df: [electronic]->RandomForestClassifier: 0.92\n",
       "test-df: [electronic]->SVC: 0.89\n",
-      "\n",
       "cross_val_score: [funk]->LogisticRegression: {'min': 0.87, 'max': 0.89, 'mean': 0.88}\n",
       "cross_val_score: [funk]->KNeighborsClassifier: {'min': 0.88, 'max': 0.88, 'mean': 0.88}\n",
       "cross_val_score: [funk]->DecisionTreeClassifier: {'min': 0.86, 'max': 0.89, 'mean': 0.88}\n",
       "cross_val_score: [funk]->RandomForestClassifier: {'min': 0.9, 'max': 0.92, 'mean': 0.91}\n",
       "cross_val_score: [funk]->SVC: {'min': 0.89, 'max': 0.89, 'mean': 0.89}\n",
-      "\n",
       "test-df: [funk]->LogisticRegression: 0.95\n",
       "test-df: [funk]->KNeighborsClassifier: 0.93\n",
       "test-df: [funk]->DecisionTreeClassifier: 0.91\n",
       "test-df: [funk]->RandomForestClassifier: 0.97\n",
       "test-df: [funk]->SVC: 0.94\n",
-      "\n",
       "cross_val_score: [jazz]->LogisticRegression: {'min': 0.9, 'max': 0.91, 'mean': 0.91}\n",
       "cross_val_score: [jazz]->KNeighborsClassifier: {'min': 0.9, 'max': 0.92, 'mean': 0.91}\n",
       "cross_val_score: [jazz]->DecisionTreeClassifier: {'min': 0.86, 'max': 0.89, 'mean': 0.87}\n",
       "cross_val_score: [jazz]->RandomForestClassifier: {'min': 0.91, 'max': 0.93, 'mean': 0.92}\n",
       "cross_val_score: [jazz]->SVC: {'min': 0.91, 'max': 0.93, 'mean': 0.92}\n",
-      "\n",
       "test-df: [jazz]->LogisticRegression: 0.9\n",
       "test-df: [jazz]->KNeighborsClassifier: 0.91\n",
       "test-df: [jazz]->DecisionTreeClassifier: 0.87\n",
       "test-df: [jazz]->RandomForestClassifier: 0.91\n",
       "test-df: [jazz]->SVC: 0.9\n",
-      "\n",
       "cross_val_score: [metal]->LogisticRegression: {'min': 0.88, 'max': 0.92, 'mean': 0.9}\n",
       "cross_val_score: [metal]->KNeighborsClassifier: {'min': 0.89, 'max': 0.92, 'mean': 0.91}\n",
       "cross_val_score: [metal]->DecisionTreeClassifier: {'min': 0.91, 'max': 0.96, 'mean': 0.93}\n",
       "cross_val_score: [metal]->RandomForestClassifier: {'min': 0.94, 'max': 0.96, 'mean': 0.95}\n",
       "cross_val_score: [metal]->SVC: {'min': 0.91, 'max': 0.92, 'mean': 0.91}\n",
-      "\n",
       "test-df: [metal]->LogisticRegression: 0.88\n",
       "test-df: [metal]->KNeighborsClassifier: 0.88\n",
       "test-df: [metal]->DecisionTreeClassifier: 0.92\n",
       "test-df: [metal]->RandomForestClassifier: 0.95\n",
       "test-df: [metal]->SVC: 0.88\n",
-      "\n",
       "cross_val_score: [r&b]->LogisticRegression: {'min': 0.89, 'max': 0.9, 'mean': 0.89}\n",
       "cross_val_score: [r&b]->KNeighborsClassifier: {'min': 0.88, 'max': 0.9, 'mean': 0.89}\n",
       "cross_val_score: [r&b]->DecisionTreeClassifier: {'min': 0.87, 'max': 0.92, 'mean': 0.9}\n",
       "cross_val_score: [r&b]->RandomForestClassifier: {'min': 0.91, 'max': 0.91, 'mean': 0.91}\n",
       "cross_val_score: [r&b]->SVC: {'min': 0.9, 'max': 0.9, 'mean': 0.9}\n",
-      "\n",
       "test-df: [r&b]->LogisticRegression: 0.91\n",
       "test-df: [r&b]->KNeighborsClassifier: 0.91\n",
       "test-df: [r&b]->DecisionTreeClassifier: 0.9\n",
       "test-df: [r&b]->RandomForestClassifier: 0.94\n",
       "test-df: [r&b]->SVC: 0.91\n",
-      "\n",
       "cross_val_score: [rap]->LogisticRegression: {'min': 0.93, 'max': 0.97, 'mean': 0.95}\n",
       "cross_val_score: [rap]->KNeighborsClassifier: {'min': 0.88, 'max': 0.92, 'mean': 0.9}\n",
       "cross_val_score: [rap]->DecisionTreeClassifier: {'min': 0.93, 'max': 0.96, 'mean': 0.95}\n",
       "cross_val_score: [rap]->RandomForestClassifier: {'min': 0.95, 'max': 0.98, 'mean': 0.97}\n",
       "cross_val_score: [rap]->SVC: {'min': 0.9, 'max': 0.94, 'mean': 0.93}\n",
-      "\n",
       "test-df: [rap]->LogisticRegression: 0.97\n",
       "test-df: [rap]->KNeighborsClassifier: 0.93\n",
       "test-df: [rap]->DecisionTreeClassifier: 0.97\n",
       "test-df: [rap]->RandomForestClassifier: 0.98\n",
       "test-df: [rap]->SVC: 0.96\n",
-      "\n",
       "cross_val_score: [rock]->LogisticRegression: {'min': 0.88, 'max': 0.92, 'mean': 0.9}\n",
       "cross_val_score: [rock]->KNeighborsClassifier: {'min': 0.87, 'max': 0.88, 'mean': 0.87}\n",
       "cross_val_score: [rock]->DecisionTreeClassifier: {'min': 0.87, 'max': 0.93, 'mean': 0.9}\n",
       "cross_val_score: [rock]->RandomForestClassifier: {'min': 0.9, 'max': 0.9, 'mean': 0.9}\n",
       "cross_val_score: [rock]->SVC: {'min': 0.89, 'max': 0.9, 'mean': 0.89}\n",
-      "\n",
       "test-df: [rock]->LogisticRegression: 0.93\n",
       "test-df: [rock]->KNeighborsClassifier: 0.92\n",
       "test-df: [rock]->DecisionTreeClassifier: 0.95\n",
       "test-df: [rock]->RandomForestClassifier: 0.95\n",
       "test-df: [rock]->SVC: 0.93\n",
-      "\n",
       "cross_val_score: [techno]->LogisticRegression: {'min': 0.93, 'max': 0.93, 'mean': 0.93}\n",
       "cross_val_score: [techno]->KNeighborsClassifier: {'min': 0.93, 'max': 0.93, 'mean': 0.93}\n",
       "cross_val_score: [techno]->DecisionTreeClassifier: {'min': 0.93, 'max': 0.95, 'mean': 0.94}\n",
       "cross_val_score: [techno]->RandomForestClassifier: {'min': 0.94, 'max': 0.96, 'mean': 0.95}\n",
       "cross_val_score: [techno]->SVC: {'min': 0.93, 'max': 0.94, 'mean': 0.93}\n",
-      "\n",
       "test-df: [techno]->LogisticRegression: 0.94\n",
       "test-df: [techno]->KNeighborsClassifier: 0.95\n",
       "test-df: [techno]->DecisionTreeClassifier: 0.93\n",
       "test-df: [techno]->RandomForestClassifier: 0.95\n",
-      "test-df: [techno]->SVC: 0.95\n",
-      "\n"
+      "test-df: [techno]->SVC: 0.95\n"
      ]
     }
    ],
@@ -917,17 +897,18 @@
     "        _tmp = {\"min\":min(scores), \"max\":max(scores), \"mean\":round(np.mean(scores),2)}\n",
     "        print(f\"cross_val_score: [{gen}]->{name}: {_tmp}\")\n",
     "        classifier.fit(X_train, y_target)\n",
-    "    print()\n",
+    "    _genre_result = {}\n",
     "    for name, classifier in classifiers:\n",
     "        y_pred = classifier.predict(X_test)\n",
     "        _score = accuracy_score(y_test[gen], y_pred)\n",
     "        print(f\"test-df: [{gen}]->{name}: {round(_score, 2)}\")\n",
-    "    print()"
+    "        _genre_result[name] = _score\n",
+    "    result[gen] = _genre_result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "c7da34c2",
    "metadata": {},
    "outputs": [
@@ -937,7 +918,7 @@
        "<function sklearn.metrics._classification.accuracy_score(y_true, y_pred, *, normalize=True, sample_weight=None)>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,8 +929,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "01db8bce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(result).to_csv(\"genre-classification/data/model_performance_100.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "014aaa25",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -957,7 +948,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "014aaa25",
+   "id": "ecdd088c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f718a10",
    "metadata": {},
    "outputs": [],
    "source": []
