--- a/dev/genre-classification/training-OnevsRestClassifier.ipynb
+++ b/dev/genre-classification/training-OnevsRestClassifier.ipynb
@@ -111,8 +111,8 @@
     "        ('stdscaled', StandardScaler(), [\"popularity\",\"danceability\",\"energy\",\"key\",\"loudness\",\"mode\",\"speechiness\",\"acousticness\",\"instrumentalness\",\"liveness\",\"valence\",\"tempo\",\"duration_ms\",\"time_signature\"]),\n",
     "       ], remainder='passthrough')\n",
     "\n",
-    "X_train_scaled = ct.fit_transform(X_train_org)\n",
-    "X_test_scaled  = ct.transform(X_test_org)\n",
+    "X_train_scaled = ct.fit_transform(X_train)\n",
+    "X_test_scaled  = ct.transform(X_test)\n",
     "feature_names = ct.get_feature_names_out()\n",
     "X_train = X_train_scaled\n",
     "X_test  = X_test_scaled"
