Added a VotingClassifier to multiclass classifier.ipynb

--- a/dev/genre-classification/multiclass classifier 1k.ipynb
+++ b/dev/genre-classification/multiclass classifier 1k.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "d09c4ce6",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "1664fb24",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "id": "e4a69dd5",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
        "[10000 rows x 17 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "522c5287",
    "metadata": {},
    "outputs": [
@@ -437,13 +437,50 @@
     "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
     "y_tmp = pd.DataFrame(result[\"genre\"])\n",
-    "X = result.drop(\"genre\", axis=1)\n",
+    "X = result.copy()\n",
     "encoder = OneHotEncoder(sparse=False)\n",
     "encoder.fit(y_tmp)\n",
     "cols = [x.replace(\"x0_\", \"\") for x in encoder.get_feature_names()]\n",
     "display(len(cols))\n",
     "y = pd.DataFrame(encoder.transform(y_tmp), columns=cols)\n",
-    "X_train_org, X_test_org, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state = 42, stratify=y)# , stratify=y > 0"
+    "X_train_org, X_test_org, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state = 42, stratify=y)# , stratify=y > 0\n",
+    "y_train_label = X_train_org[\"genre\"]\n",
+    "y_test_label  = X_test_org[\"genre\"]\n",
+    "\n",
+    "del X_train_org[\"genre\"]\n",
+    "del X_test_org[\"genre\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "1ddc24fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5986        metal\n",
+       "4789         jazz\n",
+       "6847          r&b\n",
+       "7205          rap\n",
+       "7220          rap\n",
+       "          ...    \n",
+       "8595         rock\n",
+       "1677    classical\n",
+       "7756          rap\n",
+       "9553       techno\n",
+       "431         blues\n",
+       "Name: genre, Length: 2000, dtype: object"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test_label"
    ]
   },
   {
@@ -600,15 +637,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b0720bca",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2000, 10)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_C[\"RandomForestClassifier\"].shape"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "2dfcff50",
    "metadata": {
     "scrolled": false
@@ -620,7 +670,7 @@
        "<Figure size 640x480 with 0 Axes>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -713,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "c7da34c2",
    "metadata": {},
    "outputs": [],
@@ -745,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "01db8bce",
    "metadata": {
     "scrolled": true
@@ -796,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "014aaa25",
    "metadata": {},
    "outputs": [
@@ -867,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "3c015601",
    "metadata": {},
    "outputs": [],
@@ -880,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "5a90aef4",
    "metadata": {},
    "outputs": [
@@ -939,12 +989,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "id": "4c37169c",
    "metadata": {},
    "outputs": [],
    "source": [
     "result_rs = {}\n",
+    "result_model = {}\n",
     "for name, obj in result_RandomSearchCV.items():\n",
     "    best_params = obj[\"RandomSearchResult\"].best_params_\n",
     "    _class_ref = obj[\"classifier\"].__class__\n",
@@ -955,12 +1006,13 @@
     "    _new_classifier_instance = obj[\"classifier\"].__class__(**best_params)   \n",
     "    _new_classifier_instance.fit(X_train, y_train)    \n",
     "    y_pred = _new_classifier_instance.predict(X_test)\n",
+    "    result_model[name] = _new_classifier_instance\n",
     "    result_rs[name] = y_pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "ca081ae4",
    "metadata": {},
    "outputs": [
@@ -970,7 +1022,7 @@
        "<Figure size 640x480 with 0 Axes>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1064,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "9cf4c291",
    "metadata": {},
    "outputs": [
@@ -1173,7 +1225,7 @@
        "techno                0.0                     0.0                     0.2"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1193,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "51958488",
    "metadata": {},
    "outputs": [
@@ -1203,7 +1255,7 @@
        "<Figure size 640x480 with 0 Axes>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1243,16 +1295,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "5e41f7ed",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.ensemble import VotingClassifier\n",
+    "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "b5ff8b94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'KNNClassifier': KNeighborsClassifier(n_neighbors=6, p=1, weights='distance'),\n",
+       " 'RandomForestClassifier': RandomForestClassifier(max_depth=15, max_features='sqrt', min_samples_split=5,\n",
+       "                        n_estimators=18, random_state=42),\n",
+       " 'DecisionTreeClassifier': DecisionTreeClassifier(criterion='entropy', random_state=42)}"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "624eb48b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VotingClassifier KNNClassifier Accuracy:\t 0.5435\n",
+      "VotingClassifier RandomForestClassifier Accuracy:\t 0.63\n",
+      "VotingClassifier DecisionTreeClassifier Accuracy:\t 0.4995\n"
+     ]
+    }
+   ],
+   "source": [
+    "for model_name in result_model:\n",
+    "    vc = VotingClassifier(estimators=[\n",
+    "        (model_name, result_model[model_name]),\n",
+    "    ], voting='soft')\n",
+    "    vc.fit(X_train, y_train_label)\n",
+    "    y_pred = vc.predict(X_test)\n",
+    "    print(f'VotingClassifier {model_name} Accuracy:\\t', accuracy_score(y_test_label, y_pred))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "624eb48b",
+   "id": "86610f25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Together"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c064d8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vc = VotingClassifier(estimators=[x for x in zip(result_model.keys(), result_model.values())], voting='soft')\n",
+    "vc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "0be441f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VotingClassifier Accuracy:\t 0.4905\n"
+     ]
+    }
+   ],
+   "source": [
+    "vc.fit(X_train, y_train_label)\n",
+    "y_pred = vc.predict(X_test)\n",
+    "print(f'VotingClassifier Accuracy:\\t', accuracy_score(y_test_label, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1779270f",
    "metadata": {},
    "outputs": [],
    "source": []
